--- a/src/style.css
+++ b/src/style.css
@@ -17,3 +17,35 @@ body
     left: 0;
     outline: none;
 }
+
+.point {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+
+.point .label {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    top: -50px;
+    left: -50px;
+    border-radius: 50%;
+    background: #0000ff77;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    line-height: 100px;
+    font-weight: 100;
+    font-size: large;
+    transform: scale(0,0);
+    transition: transform 0.3s;
+}
+
+.point.visible .label {
+    transform: scale(1,1);
+}
+
+.point .text {
+    display: none;
+}
