--- a/src/style.css
+++ b/src/style.css
@@ -66,6 +66,13 @@ body
     transform: opacity 0.3s;
     padding: 1%;
     border-radius: 20%;
+
+    transform: scale(0,0);
+    transition: transform 0.3s;
+}
+
+.appear.visible {
+    transform: scale(1,1);
 }
 
 #backButton:hover {
