--- a/src/style.css
+++ b/src/style.css
@@ -108,3 +108,19 @@ body
     border-radius: 3px;
     opacity: 0.4;
 }
+
+.loading-bar {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    height: 2px;
+    background: #ffffff;
+    transform: scaleX(0.3);
+    transition: transform 0.5s;
+    opacity: 1;
+    transition: opacity 2s;
+}
+
+.loading-bar.finished {
+    opacity: 0;
+}
