--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,21 @@ body
     outline: none;
 }
 
+#title {
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    text-align: right;
+    color: gray;
+    box-shadow: black;
+    transform: scale(1,1);
+    transition: transform 0.3s;
+}
+
+#title.hide {
+    transform: scale(0,0);
+}
+
 .point {
     position: absolute;
     top: 50%;
@@ -29,20 +44,20 @@ body
 .point .label {
     position: absolute;
     width: 100px;
-    height: 100px;
-    top: -50px;
-    left: -50px;
-    border-radius: 50%;
+    height: 25px;
+    top: -12px;
+    left: -25px;
+    border-radius: 10px;
     background: #00ffff;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    line-height: 100px;
-    font-weight: 100;
+    line-height: 25px;
+    font-weight: 400;
     font-size: large;
     transform: scale(0,0);
     transition: transform 0.3s;
-    opacity: 0.5;
+    opacity: 0.6;
     transition: opacity 0.3s;
 }
 
@@ -51,7 +66,7 @@ body
 }
 
 .point:hover .label{
-    opacity: 0.8;
+    opacity: 0.9;
 }
 
 .point .text {
@@ -62,7 +77,7 @@ body
     position: absolute;
     background-color: #00ffff;
     color: white;
-    opacity: 0.5;
+    opacity: 0.75;
     transform: opacity 0.3s;
     padding: 1%;
     border-radius: 20%;
@@ -76,7 +91,7 @@ body
 }
 
 #backButton:hover {
-    opacity: 0.8;
+    opacity: 0.9;
 }
 
 #backButton {
@@ -89,10 +104,13 @@ body
     left: 2%;
     right: 2%;
     bottom: 2%;
-    height: 20%;
+    height: fit-content;
+    max-height: 40%;
     overflow: scroll;
     opacity: 0.9;
     border-radius: 10px;
+    background-color: black;
+    padding-left: 2%;
 }
 
 *::-webkit-scrollbar {
@@ -104,9 +122,8 @@ body
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: gray;
+    background-color: #ffffffee;
     border-radius: 3px;
-    opacity: 0.4;
 }
 
 .loading-bar {
