--- a/src/style.css
+++ b/src/style.css
@@ -169,10 +169,9 @@ p {
     width: 100%;
     height: 2px;
     background: #ffffff;
-    transform: scaleX(0.3);
-    transition: transform 0.5s;
+    transform: scaleX(0);
     opacity: 1;
-    transition: opacity 2s;
+    transition: transform 1s, opacity 2s;
 }
 
 .loading-bar.finished {
