--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@ body
     height: 100%;
     margin: 0;
     overflow: hidden;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 body{
@@ -56,8 +57,8 @@ p {
 #title {
     position: absolute;
     top: 5%;
-    right: 5%;
-    text-align: right;
+    left: 5%;
+    text-align: left;
     color: gray;
     box-shadow: black;
     transform: scale(1,1);
@@ -82,9 +83,8 @@ p {
     top: -12px;
     left: -25px;
     border-radius: 10px;
-    background: #00ffff;
+    background: black;
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     line-height: 25px;
     font-weight: 400;
@@ -109,7 +109,7 @@ p {
 
 .appear {
     position: absolute;
-    background-color: #00ffff;
+    background-color: black;
     color: white;
     opacity: 0.75;
     transform: opacity 0.3s;
@@ -137,14 +137,13 @@ p {
 #content {
     left: 2%;
     width: fit-content;
-    max-width: 93%;
+    max-width: min(93%, 500px);
     bottom: 2%;
     height: fit-content;
     max-height: 40%;
     overflow: scroll;
     opacity: 0.9;
     border-radius: 10px;
-    background-color: black;
     padding-left: 2%;
 }
 
